# mcmc

./: MCMC.cpp  MCMC.dsp  MCMC.dsw  MCMC.ncb  MCMC.opt  MCMC.plg  ReadMe.txt  StdAfx.cpp  StdAfx.h
prng/: Makefile.am  Makefile.in  anti.c  compound.c  cons.c  dicg.c  eicg.c  external.c  file.c  icg.c  lcg.c  meicg.c  mt19937.c  prng.c  prng_def.h  qcg.c  sub.c  support.c
